Archive2/04/5d9b9217cd8e2c/output
main.cpp:34:26: error: no member named 'handle' in 'A'
        auto x{ (Mixins::handle(), 0)... };
                 ~~~~~~~~^
main.cpp:44:20: note: in instantiation of member function 'Checker<A, B>::go' requested here
    Checker<A, B>::go();
                   ^
1 error generated.
